# pyapp_notebook

./: .gitignore  README.md  build_pyapp_example.ps1  build_pyapp_notebook.ps1  build_with_pyapp.ps1  pyproject.toml
src/pyapp_notebook/: __init__.py  example.ipynb  example.py
