[project]
name = "pyapp-notebook"
version = "0.2.0"
description = "Add your description here"
authors = [{ name = "Quinn Hornblow", email = "QHornblow@tonkintaylor.co.nz" }]
dependencies = ["notebook>=7.0.7", "pandas>=2.2.0"]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
